# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[build-system]
requires = [ "setuptools>=60", "setuptools-scm>=8" ]

[project]
name = "contributors"

description = "A package to get contributor information."
keywords = [ "github" ]

license = { file = "LICENSE" }
authors = [
  { name = "HCookie", email = "admin@eldrest.com" },
]

requires-python = ">=3.9"

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

dynamic = [ "version" ]

dependencies = [
  "github3.py==4.0.1",
  "python-dotenv==1.0.1",
  "requests==2.32.3",

]

optional-dependencies.all = [  ]

optional-dependencies.tests = [ 
    "black==24.10.0",
    "flake8==7.1.1",
    "mypy==1.11.2",
    "mypy-extensions==1.0.0",
    "pylint==3.3.1",
    "pytest==8.3.3",
    "pytest-cov==5.0.0",
    "types-requests==2.32.0.20240914",
]
